refactor: aplica lombok e usa List.of em DBService